--- a/web/index.html
+++ b/web/index.html
@@ -22,7 +22,7 @@
   <!-- iOS meta tags & icons -->
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
-  <meta name="apple-mobile-web-app-title" content="닥터큐알">
+  <meta name="apple-mobile-web-app-title" content="drqr">
   <link rel="apple-touch-icon" href="icons/Icon-192.png">
 
   <!-- Favicon -->
