--- a/web/index.html
+++ b/web/index.html
@@ -28,7 +28,7 @@
   <!-- Favicon -->
   <link rel="icon" type="image/png" href="favicon.png"/>
 
-  <title>닥터큐알</title>
+  <title>drqr</title>
   <link rel="manifest" href="manifest.json">
 
   <script>
